--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="app.capstoneproject">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name=".LetsConnectApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +20,9 @@
         </activity>
         <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.ForgotActivity" />
-        <activity android:name=".ui.CreateActivity"></activity>
+        <activity android:name=".ui.CreateActivity" />
+        <activity android:name=".ui.ContactsActivity"
+            android:theme="@style/NoActionBarAppTheme"/>
     </application>
 
 </manifest>
