--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,18 +28,20 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile "com.android.support:design:23.2.0"
-    compile 'com.jakewharton:butterknife:8.4.0'
-    apt 'com.jakewharton:butterknife-compiler:8.4.0'
 
     /* For Google Play Services */
+
+
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.google.android.gms:play-services-safetynet:9.4.0'
     compile 'com.google.android.gms:play-services-auth:9.4.0'
-    compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.google.firebase:firebase-auth:9.4.0'
-
+    compile 'com.android.support:support-v4:23.4.0'
+    testCompile 'junit:junit:4.12'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.firebase:firebase-client-android:2.5.2'
 
 }
 
